Fixed dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,8 @@
   --color-primary: #10b981;
   --color-text-primary: var(--text-primary);
   --color-text-secondary: var(--text-secondary);
-  --color-background-light: transparent;
-  --color-background-dark: transparent;
+  --color-background-light: #D7EEAE;
+  --color-background-dark: #072724;
   --font-display: Inter, sans-serif;
   --radius: 0.25rem;
   --radius-lg: 0.5rem;
@@ -15,14 +15,14 @@
 }
 
 :root {
-  --gradient-bg: radial-gradient(circle, #d7eeae 0%, #d7eeae 100%);
+  --gradient-bg: radial-gradient(circle, #D7EEAE 0%, #D7EEAE 100%);
   --text-main: #000000;
   --text-primary: #000000;
   --text-secondary: #0f172a;
 }
 
 .dark {
-  --gradient-bg: radial-gradient(circle, #013220 0%, #013220 100%);
+  --gradient-bg: radial-gradient(circle, #072724 0%, #072724 100%);
   --text-main: #ffffff;
   --text-primary: #ffffff;
   --text-secondary: #ecfdf5;
